--- a/templates/tournament/deployment.yaml
+++ b/templates/tournament/deployment.yaml
@@ -23,5 +23,9 @@ spec:
             - name: {{ .name }}
               value: {{ .value | quote }}
             {{- end }}
+      // ... existing code ...
+{{- if .Values.tournament.imagePullSecrets }}
+      imagePullSecrets:
+{{ toYaml .Values.tournament.imagePullSecrets | nindent 8 }}
 {{- end }}
-
+{{- end }}
