--- a/templates/tournament/ingress.yaml
+++ b/templates/tournament/ingress.yaml
@@ -1,4 +1,4 @@
-{{ - if .Values.tournament.ingress.enabled }}
+{{- if .Values.tournament.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -17,7 +17,7 @@ spec:
               service:
                 name: tournament
                 port:
-                  number: 8080
+                  number: {{ $.Values.tournament.port }}
           {{- end }}
     {{- end }}
 {{- end }}
