--- a/templates/tournament/deployment.yaml
+++ b/templates/tournament/deployment.yaml
@@ -23,9 +23,8 @@ spec:
             - name: {{ .name }}
               value: {{ .value | quote }}
             {{- end }}
-      // ... existing code ...
-{{- if .Values.tournament.imagePullSecrets }}
+      {{- if .Values.tournament.imagePullSecrets }}
       imagePullSecrets:
-{{ toYaml .Values.tournament.imagePullSecrets | nindent 8 }}
-{{- end }}
+        {{- toYaml .Values.tournament.imagePullSecrets | nindent 8 }}
+      {{- end }}
 {{- end }}
